--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
+    <color name="colorAccent">#B70000</color>
+    <color name="normalTextColor">#757575</color>
+    <color name="red">#FF606D</color>
+    <color name="orange">#FFA159</color>
+    <color name="yellow">#FFCE18</color>
+    <color name="green">#54D855</color>
+    <color name="blue">#6E8DFF</color>
+    <color name="purple">#B067FF</color>
 </resources>
