--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="DefaultTextStyle">
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="TitleTextStyle" parent="DefaultTextStyle">
+        <item name="android:fontFamily">@font/black</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="SubTitleTextStyle" parent="DefaultTextStyle">
+        <item name="android:fontFamily">@font/regular</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="PrimaryTextStyle" parent="DefaultTextStyle">
+        <item name="android:fontFamily">@font/bold</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="SecondaryTextStyle" parent="DefaultTextStyle">
+        <item name="android:fontFamily">@font/light</item>
+        <item name="android:textColor">@color/normalTextColor</item>
+        <item name="android:textSize">14sp</item>
     </style>
 </resources>
