Make functionItems observable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,10 +52,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:text="@{vm.functionItems[vm.skinNumber - 1].function}"
+                android:text="@{vm.functionItems[vm.skinNumber - 1].toString()}"
                 app:layout_constraintBottom_toBottomOf="@id/skinName"
                 app:layout_constraintStart_toEndOf="@id/skinName"
-                tools:text="무드등 켜기 / 끄기" />
+                tools:text="무드등 밝기 조절" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
