--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="colorPrimaryDark">#FFFFFF</color>
     <color name="colorAccent">#B70000</color>
     <color name="normalTextColor">#757575</color>
+    <color name="rippleColor">#F1F1F1</color>
+
     <color name="red">#FF606D</color>
     <color name="orange">#FFA159</color>
     <color name="yellow">#FFCE18</color>
