--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp">
+            android:layout_marginStart="@dimen/pageHorizontalMargin"
+            android:layout_marginTop="@dimen/pageVerticalMargin">
 
             <View
                 android:id="@+id/skinColor"
@@ -62,7 +62,7 @@
             style="@style/SubTitleTextStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="@dimen/pageHorizontalMargin"
             android:layout_marginTop="4dp"
             android:text="@string/skin_selected"
             android:textColor="@android:color/black" />
@@ -72,7 +72,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="@dimen/pageVerticalMargin"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
             tools:itemCount="6"
