Create rotation increase value

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,5 +77,23 @@
             app:spanCount="2"
             tools:itemCount="6"
             tools:listitem="@layout/item_function" />
+
+        <TextView
+            style="@style/SecondaryTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="32dp"
+            android:text="@string/rotation_increase"
+            android:textColor="@color/lightTextColor" />
+
+        <TextView
+            style="@style/SecondaryTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@{vm.rotationIncrease.toString()}"
+            android:textColor="@color/lightTextColor"
+            tools:text="123" />
     </LinearLayout>
 </layout>
